# Tracking_Node

./: README.md  setup.sh
sandbox/object_files/: objRec_node.cpp  objRec_node.h
sandbox/tracking_node/: '  .matrix_transform.cpp.swp  .pointcloud_filtering.cpp.swp  CMakeLists.txt  Data for filtering and icp.xlsx  README.txt  ]  back_view.pcd  concatenate_clouds.cpp  filter_faster.cpp  filter_time.cpp  filtered.pcd  fitness_score.cpp  icp_time.cpp  icp_transform.pcd  initial_guess.pcd  iterative_closest_point.cpp  kdtree_search.cpp  mainpage.dox  manifest.xml  matrix_transform.cpp  pcd_read.cpp  pcl_visualizer_demo.cpp  pcl_visualizer_demo.cpp~  pointcloud_filtering.cpp  straight.pcd  transform.pcd  translate_back.pcd
sandbox/tracking_node/test_cpp_files/: filter_faster.cpp  fitness_score.cpp
sandbox/tracking_node/test_pcd_files/: filtered.pcd  side_view.pcd  trans_rot.pcd
